exports[`Menu applies translations 1`] = `
<div
  className="ais-Menu__root">
  <div
    className="ais-Menu__items">
    <div
      className="ais-Menu__item">
      <a
        className="ais-Menu__itemLink"
        href="#"
        onClick={[Function]}>
        <span
          className="ais-Menu__itemLabel">
          white
        </span>
         
        <span
          className="ais-Menu__itemCount">
          10
        </span>
      </a>
    </div>
    <div
      className="ais-Menu__item">
      <a
        className="ais-Menu__itemLink"
        href="#"
        onClick={[Function]}>
        <span
          className="ais-Menu__itemLabel">
          black
        </span>
         
        <span
          className="ais-Menu__itemCount">
          20
        </span>
      </a>
    </div>
  </div>
  <button
    className="ais-Menu__showMore"
    disabled={false}
    onClick={[Function]}>
     display more
  </button>
</div>
`;

exports[`Menu default menu 1`] = `
<div
  className="ais-Menu__root">
  <div
    className="ais-Menu__items">
    <div
      className="ais-Menu__item">
      <a
        className="ais-Menu__itemLink"
        href="#"
        onClick={[Function]}>
        <span
          className="ais-Menu__itemLabel">
          white
        </span>
         
        <span
          className="ais-Menu__itemCount">
          10
        </span>
      </a>
    </div>
    <div
      className="ais-Menu__item">
      <a
        className="ais-Menu__itemLink"
        href="#"
        onClick={[Function]}>
        <span
          className="ais-Menu__itemLabel">
          black
        </span>
         
        <span
          className="ais-Menu__itemCount">
          20
        </span>
      </a>
    </div>
  </div>
  <button
    className="ais-Menu__showMore"
    disabled={false}
    onClick={[Function]}>
    Show more
  </button>
</div>
`;
